icc option -mieee-fp conflicts with -fp-model strict
icc option -mieee-fp conflicts with -fp-model strict
"icc: command line error: use of '-fp-model <arg>' option along with a floating point precision option not supported"

There appears to be multiple places where -fp-model is used, which conflicts with -mieee-fp. The proposed change in its current form did not allow -mieee-fp option to be used. Additional checks and "fp-model" flag cleaning appears needed.

# ICC needs -fp-model strict or floats behave badly                                                                                                                                                                                          
case "$CC" in                                                                                                                                                                                                                               
*icc*)                                                                                                                                                                                                                                      
    if [[ ! $CFLAGS_NODIST =~ "-mieee-fp" ]]; then                                                                                                                                                                                          
        CFLAGS_NODIST="$CFLAGS_NODIST -fp-model strict"                                                                                                                                                                                     
        ;;                                                                                                                                                                                                                                  
    fi                                                                                               

--- a/configure.ac
+++ b/configure.ac
@@ -1987,8 +1987,10 @@ esac
 # ICC needs -fp-model strict or floats behave badly
 case "$CC" in
 *icc*)
-    CFLAGS_NODIST="$CFLAGS_NODIST -fp-model strict"
-    ;;
+	if [[ ! $CFLAGS_NODIST =~ "-mieee-fp" ]]; then 
+    		CFLAGS_NODIST="$CFLAGS_NODIST -fp-model strict"
+    		;;
+	fi
 esac
 
 if test "$assertions" = 'true'; then
